fix css to align form items

--- a/src/components/css/AddFileForm.css
+++ b/src/components/css/AddFileForm.css
@@ -1,6 +1,7 @@
 .post-form {
   display: flex;
   flex-wrap: wrap;
+  align-items: baseline;
   gap:5%;
   width: 100%;
   margin-top: 5%;
